Corrected font size on smaller devices

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body {
 /* Hero text styles */
 .hero-text {
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 2%;
   z-index: 2;
   width: 70%;
@@ -62,13 +62,13 @@ body {
 .hero-text h6 {
   margin: 0;
   font-weight: bold;
-  font-size: calc(1.6vw); /* Responsive font size */
+  font-size: calc(1rem + 0.5vw); /* Responsive font size */
 }
 
 .hero-text h6 a.hyperlink {
   margin: 0;
   font-weight: bold;
-  font-size: calc(1.6vw); /* Responsive font size */
+  font-size: calc(1rem + 0.5vw); /* Responsive font size */
   color: inherit;
   text-decoration: none;
   border-bottom: 3px solid #070a52;
@@ -141,7 +141,7 @@ body {
   padding: 10px 20px;
   cursor: pointer;
   border: none;
-  font-size: calc(1vw);
+  font-size: calc(2vw);
   border-radius: 5px;
   transition: background-color 0.3s ease-in-out;
 }
@@ -251,7 +251,7 @@ body {
   max-width: 100%;
   padding-left: 12px;
   color: #94a3b8;
-  font-size: calc(0.5rem + 0.5vw);
+  font-size: calc(0.75rem + 0.5vw);
   font-weight: 300;
   word-spacing: 0.1em;
 }
@@ -312,7 +312,7 @@ body {
 h2 {
   font-family: "Exo 2", sans-serif;
   font-weight: bold;
-  font-size: calc(2rem + 2vw); /* Responsive font size */
+  font-size: calc(2rem + 1.5vw); /* Responsive font size */
 }
 
 p {
@@ -362,7 +362,7 @@ td h6 {
 
 /* Media queries */
 @media (max-width: 900px) {
-  #exp-content-container {
+  #exp-content-container * {
     display: none;
   }
 }
